--- a/Home.html
+++ b/Home.html
@@ -25,9 +25,8 @@
           </div>
         </a>
 
-        <div class="deliver">
-</div>
-
+        <div class="deliver"> </div>
+      </div>
       <div class="lowerNav"></div>
     </header>
   </body>
