--- a/orders.html
+++ b/orders.html
@@ -1,1 +1,136 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign In - Amazon</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f3f3f3;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            width: 300px;
+            padding: 20px;
+            background-color: white;
+            border: 1px solid #ddd;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .container img {
+            display: block;
+            margin: 0 auto 20px;
+        }
+
+        h1 {
+            font-size: 24px;
+            font-weight: normal;
+            text-align: center;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        input[type="text"] {
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #a6a6a6;
+            border-radius: 3px;
+        }
+
+        .btn {
+            padding: 10px;
+            background-color: #f0c14b;
+            border: 1px solid #a88734;
+            border-radius: 3px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        .btn:hover {
+            background-color: #ddb347;
+        }
+
+        .small-text {
+            font-size: 12px;
+            color: #767676;
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .small-text a {
+            color: #0066c0;
+            text-decoration: none;
+        }
+
+        .small-text a:hover {
+            text-decoration: underline;
+        }
+
+        .new-account {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .new-account a {
+            text-decoration: none;
+            color: #0066c0;
+        }
+
+        .new-account a:hover {
+            text-decoration: underline;
+        }
+
+        footer {
+            font-size: 12px;
+            color: #555;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        footer a {
+            color: #0066c0;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon Logo" width="100">
+        <h1>Sign in</h1>
+        <form>
+            <input type="text" placeholder="Email or mobile phone number" required>
+            <button class="btn">Continue</button>
+        </form>
+        <div class="small-text">
+            By signing in, you agree to Amazon's <a href="#">Conditions of Use</a> and <a href="#">Privacy Notice</a>.
+        </div>
+        <div class="small-text">
+            <a href="#">Need help?</a>
+        </div>
+        <div class="new-account">
+            <p>New to Amazon?</p>
+            <a href="start here.html">Create your Amazon account</a>
+        </div>
+        <footer>
+            <a href="#">Conditions of Use</a> | <a href="#">Privacy Notice</a> | <a href="#">Help</a>
+        </footer>
+    </div>
+
+</body>
+</html>
