--- a/Home.html
+++ b/Home.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+    /> -->
+        <link rel="stylesheet" href="fontawesome-free-6.6.0-web/css/all.css">
+
     <link rel="stylesheet" href="style-Karim.css" />
     <link rel="stylesheet" href="style_Mariem.css">
     <link rel="icon" href="/assets/bar.png" type="image/icon type" />
@@ -66,7 +68,12 @@
       
   
     
-      <div class="lowerNav"></div>
+      <div class="lowerNav">
+        <div class="all">
+          <i class="fa-solid fa-bars"></i>
+          <span>All</span>
+        </div>
+      </div>
     </header>
 
     <div class="deliveryPopUP">
@@ -116,8 +123,37 @@
       </div>
     </div>
 
-
-
+    <div class="all_popUp">
+      <div class="all_title">
+        <i class="fa-solid fa-user"></i>
+        <span>Hello,sign in</span>
+      </div>
+      <div class="all_container_popup_one">
+        <h4>Trending</h4>
+        <a href="#"><div class="one">Best Seller</div></a>
+        <a href="#"> <div class="one">New Releases</div></a>
+        <a href="#"><div class="one">Movies & shakers</div></a>
+        <hr>
+        <h4>Digital content and devices</h4>
+        <a href="#"> <div class="one">Mobiles, Tablets & Accessories</div></a>
+        <a href="#"> <div class="one">Computers & Office Supplies</div></a>
+        <a href="#"> <div class="one">TVs & Electronics</div></a>
+        <a href="#"> <div class="one">Woman's Fashion</div></a>
+        <hr>
+        <h4>Programs & Features</h4>
+        <a href="#"> <div class="one">Today's Deals</div></a>
+        <a href="#"> <div class="one">Amazon Outlet</div></a>
+        <a href="#"> <div class="one">Sell on Amazon</div></a>
+        <hr>
+        <h4>Help & Settings</h4>
+        <a href="#"> <div class="one">Your account</div></a>
+        <a href="#"> <div class="one"><i class="fa-solid fa-globe"></i> English</div></a>
+        <a href="#"> <div class="one">Help</div></a>
+        <a href="#"> <div class="one">Sign In</div></a>
+        <hr>
+        <div class="all_close"><i class="fa-solid fa-xmark fa-2xl" ></i></div>
+      </div>
+    </div>
 
 
 
