--- a/Orders.html
+++ b/Orders.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -114,8 +115,7 @@
         <h1>Sign in</h1>
         <form>
             <input type="text" placeholder="Email or mobile phone number" required>
-            <button class="btn" onclick="window.location.href='YOUR ORDERS.html';">Continue</button>
-
+            <button class="btn">Continue</button>
         </form>
         <div class="small-text">
             By signing in, you agree to Amazon's <a href="#">Conditions of Use</a> and <a href="#">Privacy Notice</a>.
