--- a/Home.html
+++ b/Home.html
@@ -69,11 +69,76 @@
   
     
       <div class="lowerNav">
+        <div class="lower_nav_left">
         <div class="all">
           <i class="fa-solid fa-bars"></i>
           <span>All</span>
         </div>
+        <a href="#" class="low_nav_ele">
+          <div>
+            Today's Deals
+          </div>
+        </a>
+        <a href="prime.html" class="low_nav_ele">
+          <div>
+            prime    
+          </div>
+        </a>
+        <a href="#" class="low_nav_ele">
+          <div>
+            Mobile Phones
+          </div>
+        </a>
+        <a href="#" class="low_nav_ele">
+          <div>
+            Electronics
+          </div>
+        </a>
+        <a href="#" class="low_nav_ele">
+          <div>
+            Appliances
+          </div>
+        </a>  
+         <a href="#" class="low_nav_ele">
+          <div>
+            Video Games
+          </div>
+        </a>
+        <a href="#" class="low_nav_ele">
+          <div>
+            Fashion
+          </div>
+        </a>
+        <a href="#" class="low_nav_ele">
+          <div>
+           Home
+          </div>
+        </a>
+        <a href="#" class="low_nav_ele">
+          <div>
+           Grocery
+          </div>
+        </a>
+        <a href="#" class="low_nav_ele">
+          <div>
+            Toys & Games
+          </div>
+        </a>
+        <a href="#" class="low_nav_ele">
+          <div>
+            Perfumes
+          </div>
+        </a>
       </div>
+      <div class="lower_nav_right">
+       
+       <span class="text highlight">BACK TO SCHOOL</span>
+        <span class="text sale">SALE</span>
+        <span class="text discount">Up to 50% off</span>
+        <span class="text extended">Deals Extended</span>
+
+      </div>
+    </div>
     </header>
 
     <div class="deliveryPopUP">
