--- a/start here.html
+++ b/start here.html
@@ -68,20 +68,37 @@
             text-decoration: underline;
         }
     </style>
+    <script>
+        function validateForm() {
+            const name = document.getElementById('name').value;
+            const mobile = document.getElementById('mobile').value;
+            const password = document.getElementById('password').value;
+            const repassword = document.getElementById('repassword').value;
+            
+            if (password.length < 6) {
+                alert('Password must be at least 6 characters long.');
+                return false;
+            }
+            
+            if (password !== repassword) {
+                alert('Passwords do not match.');
+                return false;
+            }
+        }    
+    </script>
 </head>
 <body>
 
 <div class="container">
     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon Logo" width="100">
 
-
     <h1>Create Account</h1>
-    <form action="#">
+    <form action="https://www.google.com/" onsubmit="return validateForm()">
         <label for="name">Your name</label>
         <input type="text" id="name" name="name" placeholder="First and last name" required>
 
         <label for="mobile">Mobile number</label>
-        <input type="tel" id="mobile" name="mobile"  required>
+        <input type="tel" id="mobile" name="mobile" required>
 
         <label for="password">Password</label>
         <input type="password" id="password" name="password" placeholder="At least 6 characters" required>
@@ -92,7 +109,7 @@
         <input type="submit" value="Verify mobile number">
     </form>
     <div class="footer">
-        <p>Already have an account? <a href="#">Sign in</a></p>
+        <p>Already have an account? <a href="Orders.html">Sign in</a></p>
         <p>By creating an account, you agree to Amazon's <a href="#">Conditions of Use</a> and <a href="#">Privacy Notice</a>.</p>
     </div>
 </div>
