product page for each product

--- a/Home.html
+++ b/Home.html
@@ -543,7 +543,8 @@
       </div>
   </div>
 </section>
-
+</div>
+    </section>
     <script src="script-Karim.js"></script>
     <script src="script-Mariem.js"></script>
   </body>
