--- a/Home2.html
+++ b/Home2.html
@@ -96,7 +96,7 @@
     
       <div class="box-col">
         <h3>Gaming & accessories</h3>
-       <img src=".Gaming.jpg" alt="Gaming & accessories" >
+       <img src="Gaming.jpg" alt="Gaming & accessories" >
        <a href="#">See More</a>
       </div>
     
