--- a/cart.html
+++ b/cart.html
@@ -84,15 +84,19 @@
           <div class="content">
             <div class="item">
               <div class="image">
-                <img src="/assets/21.jpeg" alt="Product" />
+                <img
+                  src="/assets/21.jpeg"
+                  alt="Product"
+                  class="product-image"
+                />
               </div>
               <div class="details">
-                <h3>Product Name</h3>
-                <p>in stock</p>
-                <p>free deleviry</p>
+                <h3 class="product-name">Product Name</h3>
+                <p class="product-stock">in stock</p>
+                <p class="product-delivery">free delivery</p>
                 <p>
                   Quantity:
-                  <select name="quantatiy" id="">
+                  <select name="quantity" class="product-quantity">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -102,8 +106,8 @@
                 </p>
               </div>
               <span
-                class="price"
                 style="position: absolute; right: 20px; top: 30px"
+                class="product-price"
               >
                 99.99$
               </span>
@@ -111,71 +115,8 @@
                 class="price"
                 style="position: absolute; right: 20px; bottom: 0px"
               >
-                Subtotal (1 item): <span>EGP 245.00</span>
-              </span>
-            </div>
-            <div class="item">
-              <div class="image">
-                <img src="/assets/21.jpeg" alt="Product" />
-              </div>
-              <div class="details">
-                <h3>Product Name</h3>
-                <p>in stock</p>
-                <p>free deleviry</p>
-                <p>
-                  Quantity:
-                  <select name="quantatiy" id="">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                  </select>
-                </p>
-              </div>
-              <span
-                class="price"
-                style="position: absolute; right: 20px; top: 30px"
-              >
-                99.99$
-              </span>
-              <span
-                class="price"
-                style="position: absolute; right: 20px; bottom: 0px"
-              >
-                Subtotal (1 item): <span>EGP 245.00</span>
-              </span>
-            </div>
-            <div class="item">
-              <div class="image">
-                <img src="/assets/21.jpeg" alt="Product" />
-              </div>
-              <div class="details">
-                <h3>Product Name</h3>
-                <p>in stock</p>
-                <p>free deleviry</p>
-                <p>
-                  Quantity:
-                  <select name="quantatiy" id="">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                  </select>
-                </p>
-              </div>
-              <span
-                class="price"
-                style="position: absolute; right: 20px; top: 30px"
-              >
-                99.99$
-              </span>
-              <span
-                class="price"
-                style="position: absolute; right: 20px; bottom: 0px"
-              >
-                Subtotal (1 item): <span>EGP 245.00</span>
+                Subtotal (1 item):
+                <span class="product-subtotal">EGP 245.00</span>
               </span>
             </div>
           </div>
@@ -189,15 +130,19 @@
           <div class="buy-it-div">
             <div class="item">
               <div class="image">
-                <img src="/assets/21.jpeg" alt="Product" />
+                <img
+                  src="/assets/21.jpeg"
+                  alt="Product"
+                  class="product-image"
+                />
               </div>
               <div class="details">
-                <h3>Product Name</h3>
-                <p>in stock</p>
-                <p>free deleviry</p>
+                <h3 class="product-name">Product Name</h3>
+                <p class="product-stock">in stock</p>
+                <p class="product-delivery">free delivery</p>
                 <p>
                   Quantity:
-                  <select name="quantatiy" id="">
+                  <select name="quantity" class="product-quantity">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -207,8 +152,8 @@
                 </p>
               </div>
               <span
-                class="price"
                 style="position: absolute; right: 20px; top: 30px"
+                class="product-price"
               >
                 99.99$
               </span>
@@ -216,71 +161,8 @@
                 class="price"
                 style="position: absolute; right: 20px; bottom: 0px"
               >
-                Subtotal (1 item): <span>EGP 245.00</span>
-              </span>
-            </div>
-            <div class="item">
-              <div class="image">
-                <img src="/assets/21.jpeg" alt="Product" />
-              </div>
-              <div class="details">
-                <h3>Product Name</h3>
-                <p>in stock</p>
-                <p>free deleviry</p>
-                <p>
-                  Quantity:
-                  <select name="quantatiy" id="">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                  </select>
-                </p>
-              </div>
-              <span
-                class="price"
-                style="position: absolute; right: 20px; top: 30px"
-              >
-                99.99$
-              </span>
-              <span
-                class="price"
-                style="position: absolute; right: 20px; bottom: 0px"
-              >
-                Subtotal (1 item): <span>EGP 245.00</span>
-              </span>
-            </div>
-            <div class="item">
-              <div class="image">
-                <img src="/assets/21.jpeg" alt="Product" />
-              </div>
-              <div class="details">
-                <h3>Product Name</h3>
-                <p>in stock</p>
-                <p>free deleviry</p>
-                <p>
-                  Quantity:
-                  <select name="quantatiy" id="">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                  </select>
-                </p>
-              </div>
-              <span
-                class="price"
-                style="position: absolute; right: 20px; top: 30px"
-              >
-                99.99$
-              </span>
-              <span
-                class="price"
-                style="position: absolute; right: 20px; bottom: 0px"
-              >
-                Subtotal (1 item): <span>EGP 245.00</span>
+                Subtotal (1 item):
+                <span class="product-subtotal">EGP 245.00</span>
               </span>
             </div>
           </div>
@@ -502,8 +384,6 @@
 
     <script>
       window.onload = () => {
-        // console.log(document.querySelectorAll(".container .main .your-items .buy-it-div,.no-items-div"));
-
         document.querySelectorAll(
           ".container .your-items .switch span"
         )[0].style.cssText =
@@ -518,17 +398,67 @@
               .forEach((el) => {
                 el.style.cssText = "color: black; border-bottom: none;";
               });
-            if(document.querySelector(".container .main .your-items .no-items-div").style.display === "none"){
-              document.querySelector(".container .main .your-items .no-items-div").style.display = "block";
-              document.querySelector(".container .main .your-items .buy-it-div").style.display = "none";
-            }else{
-              document.querySelector(".container .main .your-items .no-items-div").style.display = "none";
-              document.querySelector(".container .main .your-items .buy-it-div").style.display = "block";
+            if (
+              document.querySelector(
+                ".container .main .your-items .no-items-div"
+              ).style.display === "none"
+            ) {
+              document.querySelector(
+                ".container .main .your-items .no-items-div"
+              ).style.display = "block";
+              document.querySelector(
+                ".container .main .your-items .buy-it-div"
+              ).style.display = "none";
+            } else {
+              document.querySelector(
+                ".container .main .your-items .no-items-div"
+              ).style.display = "none";
+              document.querySelector(
+                ".container .main .your-items .buy-it-div"
+              ).style.display = "block";
             }
             ele.style.cssText =
               "color:rgb(45, 193, 198);border-bottom:3px solid rgb(45, 193, 198);";
           };
         });
+
+      const productData = JSON.parse(localStorage.getItem("selectedProduct"));
+
+      const productDataArray = JSON.parse(
+        localStorage.getItem("selectedProduct")
+      );
+      if (productDataArray) {
+        const productItems = document.querySelectorAll(".item");
+        productItems.forEach((productItem) => {
+          if (productData) {
+            productItem.querySelector(".product-image").src = productData.image;
+            productItem.querySelector(".product-name").textContent =
+              productData.name;
+            productItem.querySelector(
+              ".product-price"
+            ).textContent = `$${productData.price}`;
+            productItem.querySelector(".product-stock").textContent =
+              "In stock";
+            productItem.querySelector(".product-delivery").textContent =
+              "Free delivery";
+
+            const quantitySelect =
+              productItem.querySelector(".product-quantity");
+            quantitySelect.value = productData.quantity || 1;
+            const subtotal = productData.price * quantitySelect.value;
+            productItem.querySelector(
+              ".product-subtotal"
+            ).textContent = `EGP ${subtotal.toFixed(2)}`;
+
+            quantitySelect.addEventListener("change", function () {
+              const updatedSubtotal = productData.price * this.value;
+              productItem.querySelector(
+                ".product-subtotal"
+              ).textContent = `EGP ${updatedSubtotal.toFixed(2)}`;
+            });
+          }
+        });
+      }
     </script>
   </body>
 </html>
