--- a/Get started.html
+++ b/Get started.html
@@ -108,7 +108,7 @@
     <!-- Main Content -->
     <div class="main-content">
         <h1>Join Amazon Prime</h1>
-        <p>asmaa, Sign up for Amazon Prime to experience the membership program that over 100 million Prime members enjoy worldwide for EGP 29.00/month.</p>
+        <p> Sign up for Amazon Prime to experience the membership program that over 100 million Prime members enjoy worldwide for EGP 29.00/month.</p>
         
         <!-- Benefits -->
         <div class="benefits">
